--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "hubot-help": "^0.2.0",
     "hubot-heroku-keepalive": "^1.0.2",
     "hubot-maps": "0.0.2",
+    "hubot-misawa": "^0.1.1",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
     "hubot-rules": "^0.1.1",
+    "hubot-schedule": "^0.5.0",
     "hubot-scripts": "^2.17.2",
+    "hubot-shinchoku-dou": "0.0.3",
     "hubot-shipit": "^0.2.0",
-    "hubot-slack": "^4.2.2"
+    "hubot-slack": "^4.2.2",
+    "hubot-thecat": "^1.0.1"
   },
   "engines": {
     "node": "0.10.x"
