--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.2.0",
     "hubot-heroku-keepalive": "^1.0.2",
+    "hubot-himawari8": "0.0.3",
     "hubot-maps": "0.0.2",
     "hubot-misawa": "^0.1.1",
     "hubot-pugme": "^0.1.0",
@@ -21,7 +22,8 @@
     "hubot-shinchoku-dou": "0.0.3",
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^4.2.2",
-    "hubot-thecat": "^1.0.1"
+    "hubot-thecat": "^1.0.1",
+    "hubot-weather-ja": "^0.1.0"
   },
   "engines": {
     "node": "0.10.x"
