--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "hubot-shipit": "^0.2.0",
     "hubot-slack": "^4.2.2",
     "hubot-thecat": "^1.0.1",
-    "hubot-weather-ja": "^0.1.0"
+    "hubot-weather-ja": "^0.1.0",
+    "moment": "^2.10.3"
   },
   "engines": {
     "node": "0.10.x"
